# mbi

./: .gitignore  meeting_protocol.md
du01/: a1i.ipynb
du02/: CMakeLists.txt  Tree.cpp  Tree.h  alignment.cpp  alignment.h  download_data.sh  felsenstein.cpp  felsenstein.h  protocol.md  test.cpp  test1.cpp  tree.cpp  tree.h
du02-analysis/: report.typ  task_ef.ipynb
du03/: report.typ
